--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,7 +36,7 @@
   </div>
 
   <div class="container border-top border-bottom border-3">
-    <h2 class="title">Here are some of the avalable items</h2>
+    <h2 class="title">Here are some of the available items</h2>
   </div>
   <div class="container my-5 p-2">
     <%= render "shared/equipshow" %>
